fix: dark mode toogle bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -144,3 +144,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
